refactor: introduce virtual thread